--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,98 +1,109 @@
-*{
-  box-sizing: border-box;
+body, h1, h2, h3, p, ul, li, button {
+  margin: 0;
+  padding: 0;
 }
 
-body{
-  background-color: aliceblue;
+body {
+  font-family: 'Arial', sans-serif;
+  line-height: 1.6;
+  color: slategray;
+  background-color: whitesmoke;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 20px;
+  padding: 20px;
 }
 
 .site-header {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding: 20px;
-  background-color: darkslategray;
-  color: aliceblue;
+  background-color: #333;
+  color: #fff;
+  padding: 25px;
+  text-align: center;
+  font-size: larger;
 }
 
 .site-header h1 {
-  font-size: 300%;
+  margin: 0;
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav li {
   display: inline-block;
-}
-
-.site-header nav {
-  padding-top: 15px;
   margin-right: 20px;
-  float: right;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 20px;
 }
 
-.site-header nav ul {
-  list-style-type: none;
-}
-
-.site-header nav ul li {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  margin-left: 25px;
-}
-
-.site-header button {
-  display: flex;
-  color: black;
-  border: 4px solid black;
-  border-radius: 3px;
-  font-size: 80%;
-}
-
-a { 
+nav a {
   text-decoration: none;
+  color: whitesmoke;
+  font-weight: bold;
 }
 
-p {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  font-size: 20px;
-  color: black;
+nav a:hover {
+  color: whitesmoke;
+}
+
+section {
+  margin: 20px 0;
 }
 
 aside {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  flex-wrap: wrap;
-  background-color: beige;
-  color: black;
-  padding: 80px;
-  text-align: left;
+  float: left;
+  width: 30%;
+  margin-left: 25px;
 }
 
-.refactoring {
-  flex-wrap: wrap;
-  text-align: center;
+aside img {
+  margin-left: 30px;
+  width: 75%;
+  height: auto;
+  border-radius: 5px;
 }
 
-.refactoring p {
-  padding: auto;
+article {
+  margin-left: 35px;
+  float: left;
+  width: 65%;
 }
 
-.refactoring h3, .front-end h3, .contacts h3 {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 150%;
-    padding-top: 20px;
-    margin-right: auto;
-    margin-left: auto;
-    display: flex;
-    background-color: darkslategray;
-    color: aliceblue;
+h2, h3 {
+  color: #333;
 }
 
-img {
-  box-shadow: 4px 4px slategray;
-  border-radius: 5%;
-  
+ul {
+  list-style: none;
+}
+
+button {
+  background-color: slategray;
+  color: whitesmoke;
+  padding: 10px;
+  border: 2px black;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+button a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+
+button:hover {
+  background-color: black;
+}
+
+.contacts {
+  margin-left: 20px;
+
 }
 
 footer {
-  padding: 20px;
   text-align: center;
-  background: slategray;
-  color: aliceblue;
+  padding: 10px;
+  background-color: #333;
+  color: whitesmoke;
 }
